--- a/WebQuanLiCuaHangBanOto/Views/NhanVien/DocBangNhanVien.cshtml
+++ b/WebQuanLiCuaHangBanOto/Views/NhanVien/DocBangNhanVien.cshtml
@@ -117,9 +117,9 @@
                 @Html.DisplayFor(modelItem => item.ChucVu)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new {  id=item.Idnv }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.Idnv }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Idnv })
             </td>
         </tr>
 }
