--- a/WebQuanLiCuaHangBanOto/Views/TaiKhoan/DocBangTaiKhoan.cshtml
+++ b/WebQuanLiCuaHangBanOto/Views/TaiKhoan/DocBangTaiKhoan.cshtml
@@ -98,9 +98,9 @@
                 @Html.DisplayFor(modelItem => item.Role)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id=item.Idtk }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.Idtk }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Idtk })
             </td>
         </tr>
 }
