--- a/WebQuanLiCuaHangBanOto/Views/ThongBaoConTtroller/DocBangThongBao.cshtml
+++ b/WebQuanLiCuaHangBanOto/Views/ThongBaoConTtroller/DocBangThongBao.cshtml
@@ -129,9 +129,9 @@
                 @Html.DisplayFor(modelItem => item.Idkh)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id=item.Idtb}) |
+                        @Html.ActionLink("Details", "Details", new { id = item.Idtb }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Idtb })
             </td>
         </tr>
 }
