--- a/WebQuanLiCuaHangBanOto/Views/Login/Index.cshtml
+++ b/WebQuanLiCuaHangBanOto/Views/Login/Index.cshtml
@@ -49,6 +49,12 @@
             <div class="form-group">
                 <button type="submit" class="btn btn-primary w-100">Đăng nhập</button>
             </div>
+
+            <div class="form-group mt-3 text-center">
+                <span>Chưa có tài khoản?</span><br />
+                <a class="btn btn-outline-secondary btn-sm mt-2" asp-action="Register" asp-controller="Login">Đăng ký</a>
+            </div>
+
             @if (!ViewData.ModelState.IsValid)
             {
                 <div class="alert alert-danger mt-3">
@@ -57,6 +63,7 @@
             }
         </form>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
