--- a/WebQuanLiCuaHangBanOto/Views/Home/viewshop.cshtml
+++ b/WebQuanLiCuaHangBanOto/Views/Home/viewshop.cshtml
@@ -35,7 +35,7 @@
     <div class="h__menu__overlay"></div>
     <div class="h__menu__wrapper">
         <div class="h__menu__logo">
-            <a href="#"><img src="~/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
+            <a href="#"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
         </div>
 
         <div class="h__menu__widget">
@@ -110,7 +110,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="~/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
+                        <a href="./index.html"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -187,7 +187,7 @@
     </section>
     <!--End -->
     <!--  Begin -->
-    <section class="breadcrumb-section set-bg" data-setbg="~/img/breadcrumb.jpg">
+    <section class="breadcrumb-section set-bg" data-setbg="/img/breadcrumb.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -309,7 +309,7 @@
                                     <div class="latest-prdouct__slider__item">
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="~/img/latest-product/lp-1.jpg" alt="">
+                                                <img src="/img/latest-product/lp-1.jpg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>
@@ -321,7 +321,7 @@
                                         </a>
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="~/img/latest-product/lp-2.jpg" alt="">
+                                                <img src="/img/latest-product/lp-2.jpg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Ford Everest XLT 4×2 MT</h6>
@@ -330,7 +330,7 @@
                                         </a>
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="img/latest-product/lp-3.jpg" alt="">
+                                                <img src="/img/latest-product/lp-3.jpg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Ford Ranger Wildtrak 4×4 AT</h6>
@@ -341,7 +341,7 @@
                                     <div class="latest-prdouct__slider__item">
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="~/img/latest-product/lp-1.jpg" alt="">
+                                                <img src="/img/latest-product/lp-1.jpg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>
@@ -353,7 +353,7 @@
                                         </a>
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="img/latest-product/lp-2.jpg" alt="">
+                                                <img src="/img/latest-product/lp-2.jpg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Ford Everest XLT 4×2 MT</h6>
@@ -362,7 +362,7 @@
                                         </a>
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="~/img/latest-product/lp-3.jpg" alt="">
+                                                <img src=" /img/latest-product/lp-3.jpg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Ford Ranger Wildtrak 4×4 AT</h6>
@@ -385,7 +385,7 @@
                                 <div class="col-lg-4">
                                     <div class="product__discount__item">
                                         <div class="product__discount__item__pic set-bg"
-                                             data-setbg="~/img/product/discount/pd-1.jpg">
+                                             data-setbg="/img/product/discount/pd-1.jpg">
                                             <div class="product__discount__percent">-20%</div>
                                             <ul class="product__item__pic__hover">
                                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -403,7 +403,7 @@
                                 <div class="col-lg-4">
                                     <div class="product__discount__item">
                                         <div class="product__discount__item__pic set-bg"
-                                             data-setbg="~/img/product/discount/pd-2.jpg">
+                                             data-setbg="/img/product/discount/pd-2.jpg">
                                             <div class="product__discount__percent">-20%</div>
                                             <ul class="product__item__pic__hover">
                                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -421,7 +421,7 @@
                                 <div class="col-lg-4">
                                     <div class="product__discount__item">
                                         <div class="product__discount__item__pic set-bg"
-                                             data-setbg="~/img/product/discount/pd-3.jpg">
+                                             data-setbg="/img/product/discount/pd-3.jpg">
                                             <div class="product__discount__percent">-20%</div>
                                             <ul class="product__item__pic__hover">
                                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -439,7 +439,7 @@
                                 <div class="col-lg-4">
                                     <div class="product__discount__item">
                                         <div class="product__discount__item__pic set-bg"
-                                             data-setbg="~/img/product/discount/pd-4.jpg">
+                                             data-setbg="/img/product/discount/pd-4.jpg">
                                             <div class="product__discount__percent">-20%</div>
                                             <ul class="product__item__pic__hover">
                                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -457,7 +457,7 @@
                                 <div class="col-lg-4">
                                     <div class="product__discount__item">
                                         <div class="product__discount__item__pic set-bg"
-                                             data-setbg="~/img/product/discount/pd-5.jpg">
+                                             data-setbg="/img/product/discount/pd-5.jpg">
                                             <div class="product__discount__percent">-20%</div>
                                             <ul class="product__item__pic__hover">
                                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -475,7 +475,7 @@
                                 <div class="col-lg-4">
                                     <div class="product__discount__item">
                                         <div class="product__discount__item__pic set-bg"
-                                             data-setbg="~/img/product/discount/pd-6.jpg">
+                                             data-setbg="/img/product/discount/pd-6.jpg">
                                             <div class="product__discount__percent">-20%</div>
                                             <ul class="product__item__pic__hover">
                                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -535,7 +535,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="~/img/product/product-2.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="/img/product/product-2.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -550,7 +550,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="img/product/product-3.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="/img/product/product-3.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -565,7 +565,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="~/img/product/product-4.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="/img/product/product-4.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -580,7 +580,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="~/img/product/product-5.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="/img/product/product-5.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -595,7 +595,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="~/img/product/product-6.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="/img/product/product-6.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -610,7 +610,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="img/product/product-7.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="/img/product/product-7.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -625,7 +625,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="~/img/product/product-8.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="/img/product/product-8.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -640,7 +640,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="img/product/product-9.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="/img/product/product-9.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -655,7 +655,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="~/img/product/product-10.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="/img/product/product-10.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -670,7 +670,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="img/product/product-11.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="/product/product-11.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -685,7 +685,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="~/img/product/product-12.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="/img/product/product-12.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -717,7 +717,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__about__logo">
-                            <a href="./index.html"><img src="~/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
+                            <a href="./index.html"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
                         </div>
                         <ul>
                             <li>Address: HO CHI MINH </li>
