--- a/WebQuanLiCuaHangBanOto/Views/Home/viewindex.cshtml
+++ b/WebQuanLiCuaHangBanOto/Views/Home/viewindex.cshtml
@@ -40,7 +40,7 @@
     <div class="h__menu__overlay"></div>
     <div class="h__menu__wrapper">
         <div class="h__menu__logo">
-            <a href="#"><img src="~/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
+            <a href="#"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
         </div>
 
         <div class="h__menu__widget">
@@ -116,7 +116,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="~/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
+                        <a href="./index.html"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -188,7 +188,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="hero__item set-bg" data-setbg="~/img/hero/banner.jpg">
+                    <div class="hero__item set-bg" data-setbg="/img/hero/banner.jpg">
                         <div class="hero__text">
                             <span> SUPER CAR</span>
                             <h2>LAMBORGHINI <br />100% VIP PRO </h2>
@@ -207,27 +207,27 @@
             <div class="row">
                 <div class="categories__slider owl-carousel">
                     <div class="col-lg-3">
-                        <div class="categories__item set-bg" data-setbg="~/img/categories/cat-1.jpg">
+                        <div class="categories__item set-bg" data-setbg="/img/categories/cat-1.jpg">
                             <h5><a href="#">xe1</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="categories__item set-bg" data-setbg="~/img/categories/cat-2.jpg">
+                        <div class="categories__item set-bg" data-setbg="/img/categories/cat-2.jpg">
                             <h5><a href="#">xe2</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="categories__item set-bg" data-setbg="~/img/categories/cat-3.jpg">
+                        <div class="categories__item set-bg" data-setbg="/img/categories/cat-3.jpg">
                             <h5><a href="#">xe 3</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="categories__item set-bg" data-setbg="~/img/categories/cat-4.jpg">
+                        <div class="categories__item set-bg" data-setbg="/img/categories/cat-4.jpg">
                             <h5><a href="#">xe4</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="categories__item set-bg" data-setbg="~/img/categories/cat-5.jpg">
+                        <div class="categories__item set-bg" data-setbg="/img/categories/cat-5.jpg">
                             <h5><a href="#">xe 5</a></h5>
                         </div>
                     </div>
@@ -264,7 +264,7 @@
             <div class="row featured__filter">
                 <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="~/img/featured/feature-1.png">
+                        <div class="featured__item__pic set-bg" data-setbg="/img/featured/feature-1.png">
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -279,7 +279,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix toyota ">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="img/featured/feature-2.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="/img/featured/feature-2.jpg">
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -294,7 +294,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix mercedes">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" <img src="@Url.Content("~/img/featured/feature-3.jpg")">
+                        <div class="featured__item__pic set-bg" <img src="@Url.Content("/img/featured/feature-3.jpg")">
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -309,7 +309,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix ford">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="~/img/featured/feature-4.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="/img/featured/feature-4.jpg">
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -324,7 +324,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix fresh-meat vegetables">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="~/img/featured/feature-5.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="/img/featured/feature-5.jpg">
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -339,7 +339,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix ferrari">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="~/img/featured/feature-6.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="/img/featured/feature-6.jpg">
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -354,7 +354,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix fresh-meat vegetables">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="~/img/featured/feature-7.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="/img/featured/feature-7.jpg">
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -369,7 +369,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix lamborghini">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="~/img/featured/feature-8.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="/img/featured/feature-8.jpg">
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -392,12 +392,12 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="banner__pic">
-                        <img src="~/img/banner/banner-1.jpg" alt="">
+                        <img src="/img/banner/banner-1.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="banner__pic">
-                        <img src="~/img/banner/banner-2.jpg" alt="">
+                        <img src="/img/banner/banner-2.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -411,7 +411,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__about__logo">
-                            <a href="./index.html"><img src="~/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
+                            <a href="./index.html"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
                         </div>
                         <ul>
                             <li>Address: HO CHI MINH</li>
@@ -475,11 +475,12 @@
     <!-- Footer Section End -->
 </body>
 <!-- Js Plugins -->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/owl.carousel@2.3.4/dist/owl.carousel.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/mixitup@3.3.1/dist/mixitup.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jquery-nice-select@1.1.0/js/jquery.nice-select.min.js"></script>
+<script src="@Url.Content("~/js/jquery-3.3.1.min.js")"></script>
+<script src="@Url.Content("~/js/bootstrap.min.js")"></script>
+<script src="@Url.Content("~/js/jquery.nice-select.min.js")"></script>
+<script src="@Url.Content("~/js/jquery-ui.min.js")"></script>
+<script src="@Url.Content("~/js/jquery.slicknav.js")"></script>
+<script src="@Url.Content("~/js/mixitup.min.js")"></script>
+<script src="@Url.Content("~/js/owl.carousel.min.js")"></script>
+<script src="@Url.Content("~/js/main.js")"></script>
 </html>
