--- a/WebQuanLiCuaHangBanOto/Views/Home/viewlogdetal.cshtml
+++ b/WebQuanLiCuaHangBanOto/Views/Home/viewlogdetal.cshtml
@@ -38,7 +38,7 @@
     <div class="h__menu__wrapper">
         <div class="h__menu__logo">
             
-            <a href="#"><img src="~/img/logo.png" style="width: 200px; height: 200px;" alt="fail"></a>
+            <a href="#"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt="fail"></a>
         </div>
 
         <div class="h__menu__widget">
@@ -113,7 +113,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" style="width: 50px; height: 50px;" alt=""></a>
+                        <a href="./index.html"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -191,7 +191,7 @@
     </section>
     <!-- Hero Section End -->
     <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg" data-setbg="~/img/breadcrumb.jpg">
+    <section class="breadcrumb-section set-bg" data-setbg="/img/breadcrumb.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -216,17 +216,17 @@
                     <div class="product__details__pic">
                         <div class="product__details__pic__item">
                             <img class="product__details__pic__item--large"
-                                 src="~/img/product/details/product-details-1.jpg" alt="">
+                                 src="/img/product/details/product-details-1.jpg" alt="">
                         </div>
                         <div class="product__details__pic__slider owl-carousel">
-                            <img data-imgbigurl="~/img/product/details/product-details-2.jpg"
-                                 src="~/img/product/details/product-details-2.jpg" style=" height:  400px; width: 400px;">
-                            <img data-imgbigurl="~/img/product/details/product-details-3.jpg"
-                                 src="~/img/product/details/product-details-3.jpg" style=" height:  400px; width: 400px;" alt="">
-                            <img data-imgbigurl="img/product/details/product-details-5.jpg"
-                                 src="~/img/product/details/product-details-5.jpg" style=" height:  400px; width: 400px;" alt="">
-                            <img data-imgbigurl="img/product/details/product-details-4.jpg"
-                                 src="~/img/product/details/product-details-4.jpg" style=" height:  400px; width: 400px;" alt="">
+                            <img data-imgbigurl="/img/product/details/product-details-2.jpg"
+                                 src="/img/product/details/product-details-2.jpg" style=" height:  400px; width: 400px;">
+                            <img data-imgbigurl="/img/product/details/product-details-3.jpg"
+                                 src="/img/product/details/product-details-3.jpg" style=" height:  400px; width: 400px;" alt="">
+                            <img data-imgbigurl="/img/product/details/product-details-5.jpg"
+                                 src="/img/product/details/product-details-5.jpg" style=" height:  400px; width: 400px;" alt="">
+                            <img data-imgbigurl="/img/product/details/product-details-4.jpg"
+                                 src="/img/product/details/product-details-4.jpg" style=" height:  400px; width: 400px;" alt="">
                         </div>
                     </div>
                 </div>
@@ -352,7 +352,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="~/img/product/product-1.jpg">
+                        <div class="product__item__pic set-bg" data-setbg="/img/product/product-1.jpg">
                             <ul class="product__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -367,7 +367,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="~/img/product/product-2.jpg">
+                        <div class="product__item__pic set-bg" data-setbg="/img/product/product-2.jpg">
                             <ul class="product__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -382,7 +382,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="~/img/product/product-3.jpg">
+                        <div class="product__item__pic set-bg" data-setbg="/img/product/product-3.jpg">
                             <ul class="product__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -401,7 +401,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="~/img/product/product-7.jpg">
+                        <div class="product__item__pic set-bg" data-setbg="/img/product/product-7.jpg">
                             <ul class="product__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -426,7 +426,7 @@
                     <div class="footer__about">
                         <div class="footer__about__logo">
                             @* <a href="./index.html"><img src="~/img/logo.png" alt=""></a> *@
-                            <a href="#"><img src="~/img/logo.png" style="width: 200px; height: 200px;" alt="fail"></a>
+                            <a href="#"><img src="/img/logo.png" style="width: 200px; height: 200px;" alt="fail"></a>
                         </div>
                         <ul>
                             <li>Address: HO CHI MINH</li>
@@ -500,7 +500,9 @@
     <script src="@Url.Content("~/js/owl.carousel.min.js")"></script>
     <script src="@Url.Content("~/js/main.js")"></script>
 
+    <script src="~/js/jquery-3.3.1.min.js"></script>
 
+    <script src="~/js/main.js"></script>
 </body>
 
 </html>
